--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "commander": "^9.4.0",
+    "firebase": "^9.9.3",
     "fs-extra": "^10.1.0",
     "inquirer": "^9.1.0"
   }
